examples/test/testpolicy1211.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1211
  namespace: namespace238
spec:
  podSelector:
    matchLabels:
      key47: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value14
      podSelector:
        matchLabels:
          key30: value40
          key26: value32
          key4: value10
